--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
   <link rel="stylesheet" href="main.css" />
+  <script type="text/javascript" src="scripts.js"></script>
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -34,7 +36,7 @@
 
 </head>
 
-<body class="style">
+<body>
   <!--head-->
   <div class="container-head" id="topbar">
 
@@ -69,7 +71,7 @@
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">GARDENER'S HUB CREATES FRIENDSHIP FOR LOCAL COMMUNITY</p>
+      <p class="text-body-title">GARDENER'S HUB CREATES FRIENDSHIP WITH LOCAL COMMUNITY</p>
       <p class="text-body-description">Individual Work</p>
       <p class="text-body-description">Fall 2020</p>
 
@@ -98,6 +100,36 @@
 
   </div>
   <!--body2-->
+  <hr>
+
+
+  <!--body3-->
+  <div class="container_body">
+    <img src="./layout_mealplanner.png"
+      alt="Urban Backyard" class="image-hover">
+
+    <div class="image-text-hover">
+      <div><a href="/chromatic_button">MEAL PLANNER</a></div>
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Chromatic Button</p>
+      <p class="text-body-description">Fall 2020</p>
+
+    </div>
+
+  </div>
+  <div class="container_body">
+
+  </div>
+  <!--body3-->
+
+
+
+
+
+
   <div class="blank-thicker"></div>
 
 
