--- a/meal_planner/index.html
+++ b/meal_planner/index.html
@@ -74,11 +74,13 @@
 
       </div>
 
-      <img src="./layout_mealplanner.png" alt="DIAGRAM" class="image">
+      <div class="container-body-description">
+        <img src="./layout_mealplanner.png" alt="DIAGRAM" class="image">
+      </div>
     </div>
-
     <!--body1-->
 
+    <div class="blank-top"></div>
 
     <!--footer-->
     <div class="container_footer">
