architecture page updated

--- a/architecture/index.html
+++ b/architecture/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="container-head-right" id="topbar-right">
-      <div> <a href="/" class="inactive"> DESIGN </a>
+      <div> <a href="/" class="inactive"> PROJECT </a>
       </div>
       <div> <a href="/architecture" class="active"> ARCHITECTURE </a>
       </div>
@@ -86,7 +86,8 @@
       alt="RECREATION COMMONS" class="image-hover">
 
     <div class="image-text-hover">
-      <div>NARROW STRIPES</div>
+      <div><a href="/architecture/narrow_stripes">NARROW STRIPES</a></div>
+
     </div>
   </div>
   <div>
@@ -98,55 +99,17 @@
       <p class="text-body-description"> (i.e. Maximum Cumulative floor area for all the floors)</p>
     </div>
   </div>
-  <!--body3-->  
-  <hr>
-  <!--body4-->
-  <div class="container_body">
-    <img src="./KP_Diagram.jpg"
-      alt="MANIFOLD GROUND" class="image-hover">
-
-    <div class="image-text-hover">
-      <div>KAPPE HOUSE</div>
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
-      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
-      <p class="text-body-description">Instructor: Yung Ho Chang</p>
-    </div>
-  </div>
-  <!--body4-->
+  <!--body3-->
   <hr>
 
-  <!--body5-->
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
-      alt="MANIFOLD GROUND" class="image-hover">
-
-    <div class="image-text-hover">
-      <div>MANIFOLD GROUND</div>
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">[IN]ARCH ADV, SUMMERS 2014</p>
-      <p class="text-body-description">Summer Program, CED, UC Berkeley</p>
-      <p class="text-body-description">Instructor: Keith Plymale</p>
-      <p class="text-body-description">Site: 450 Hayes St. San Francisco, CA 94102</p>
-    </div>
-  </div>
-  <!--body5-->
-
-  <hr>
   <!--body6-->
   <div class="container_body">
-    <img
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recovery_of_river_edges/recovery+of+river+edges.jpg"
-      alt="RECOVERY OF RIVER EDGES" class="image-hover">
+    <img src="./recovery_of_river_edges_render.jpg" alt="RECOVERY OF RIVER EDGES"
+      class="image-hover">
 
     <div class="image-text-hover">
-      <div>RECOVERY OF RIVER EDGES</div>
+      <div><a href="/architecture/recovery_of_river_edges">RECOVERY OF RIVER EDGES</a></div>
+
     </div>
   </div>
   <div>
@@ -162,18 +125,47 @@
     </div>
   </div>
   <!--body6-->
+
+  <hr>
+
+
+
+  <!--body5-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
+      alt="MANIFOLD GROUND" class="image-hover">
+
+    <div class="image-text-hover">
+      <div><a href="/architecture/manifold_ground/">MANIFOLD GROUND</a></div>
+
+    </div>
+  </div>
+
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">[IN]ARCH ADV, SUMMERS 2014</p>
+      <p class="text-body-description">Summer Program, CED, UC Berkeley</p>
+      <p class="text-body-description">Instructor: Keith Plymale</p>
+      <p class="text-body-description">Site: 450 Hayes St. San Francisco, CA 94102</p>
+    </div>
+  </div>
+  <!--body5-->
+
+
   <hr>
 
   <!--body5-->
   <div class="container_body">
     <img
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/the_rotation_curves/Rotation+Curves.svg"
-      alt="THE ROTATION CURVES" class="image-hover" id="image-rotation-curve">
+      src="./the_rotation_of_curves.jpg"
+      alt="THE ROTATION CURVES" class="image-hover">
 
     <div class="image-text-hover">
-      <div>THE ROTATION CURVES</div>
+      <div><a href="/architecture/the_rotation_of_curves/">THE ROTATION OF CURVES</a></div>
+
     </div>
   </div>
+
   <div>
     <div class="container-body-description">
       <p class="text-body-title">Introduction to Architecture Studio 1, Fall 2015</p>
@@ -187,28 +179,77 @@
   </div>
   <!--body5-->
   <hr>
-
-  <!--body6-->
+  <!--body4-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/LACMA.jpg"
-      alt="OTHER ACADEMIC WORKS" class="image-hover">
+    <img src="./KP_Diagram.jpg" alt="MANIFOLD GROUND" class="image-hover">
 
     <div class="image-text-hover">
-      <div>OTHER ACADEMIC WORKS</div>
+      <div>KAPPE HOUSE</div>
     </div>
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">OTHER ACADEMIC WORKS</p>
-      <p class="text-body-description">LACMA 2016</p>
+      <p class="text-body-title">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
+      <p class="text-body-description">Instructor: Yung Ho Chang</p>
+    </div>
+  </div>
+  <!--body4-->
+  <hr>
+  <!--body6-->
+  <div class="container_body">
+    <img src="./other_works.jpg" alt="LACMA" class="image-hover">
+
+    <div class="image-text-hover">
+      <div><a href="/architecture/LACAMA/">LACMA</a></div>
+
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Architecture & Urbanism Design Studio ARCH 201 FALL 2016</p>
+      <p class="text-body-description"> 798 Exhibition Gallery 2010</p>
+      <p class="text-body-description"> Mountain Residential House 2012</p>
+    </div>
+  </div>
+  <!--body6-->
+  <!--body7-->
+  <div class="container_body">
+    <img src="./other_works.jpg" alt="OTHER ACADEMIC WORKS" class="image-hover">
+
+    <div class="image-text-hover">
+      <div><a href="/architecture/other_academic_works/">OTHER ACADEMIC WORKS</a></div>
+
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">THESIS STUDIO
+      </p>
       <p class="text-body-description"> 798 Exhibition Gallery 2010</p>
       <p class="text-body-description">The Renovation of a Factory Building 2013</p>
       <p class="text-body-description"> Mountain Residential House 2012</p>
     </div>
   </div>
-  <!--body6-->
+  <!--body7-->
+  <!--body8-->
+  <div class="container_body">
+    <img src="./others.jpg" alt="OTHER ACADEMIC WORKS" class="image-hover">
 
+    <div class="image-text-hover">
+      <div><a href="/architecture/other_academic_works/">OTHER ACADEMIC WORKS</a></div>
 
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">OTHER ACADEMIC WORKS</p>
+      <p class="text-body-description"> 798 Exhibition Gallery 2010</p>
+      <p class="text-body-description">The Renovation of a Factory Building 2013</p>
+      <p class="text-body-description"> Mountain Residential House 2012</p>
+    </div>
+  </div>
+  <!--body8-->
   <div class="blank-thicker"></div>
 
 
