--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
       </p>
     </div>
     <div class="container-head-right" id="topbar-right">
-      <div> <a href="/" class="inactive"> DESIGN </a>
+      <div> <a href="/" class="inactive"> PROJECT </a>
       </div>
       <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
       </div>
