--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -49,7 +49,7 @@
           </p>
         </div>
         <div class="container-head-right" id="topbar-right">
-          <div> <a href="/" class="inactive"> DESIGN </a>
+          <div> <a href="/" class="inactive"> PROJECT </a>
           </div>
           <div> <a href="/architecture" class="active"> ARCHITECTURE </a>
           </div>
