--- a/photography/index.html
+++ b/photography/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="container-head-right" id="topbar-right">
-      <div> <a href="/" class="inactive"> DESIGN </a>
+      <div> <a href="/" class="inactive"> PROJECT </a>
       </div>
       <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
       </div>
@@ -62,34 +62,43 @@
 
 
 
-
-
-
-
   <!--body-hover button-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg"
-      alt="Yellowstone National Park" class="button-hover carousel-item selected">
 
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019.jpg"
-      alt="Bosque Del Apache National Wildlife Refuge" class="button-hover carousel-item">
 
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020_1.jpg"
-      alt="Teton National Park" class="button-hover carousel-item">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020.jpg"
-      alt="Teton National Park" class="button-hover carousel-item">
+    <div class="carousel">
+      <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg"
+        alt="Yellowstone National Park" class="button-hover carousel-item selected">
 
-    <div class="container-body-button">
-      <div class="image-button-hover-left">
-        <button class="prev">
-          <p class="specialcharacters">&#60;</p>
+      <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019.jpg"
+        alt="Bosque Del Apache National Wildlife Refuge" class="button-hover carousel-item">
+
+      <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020_1.jpg"
+        alt="Teton National Park" class="button-hover carousel-item">
+      <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020.jpg"
+        alt="Teton National Park" class="button-hover carousel-item">
+
+
+      <div class="container-body-button">
+        <button class="prev image-button-hover-left">
+          <p class="specialcharacters">&#8249;</p>
+        </button>
+
+        <button class="next image-button-hover-right">
+          <p class="specialcharacters">&#8250;</p>
         </button>
       </div>
-      <div class="image-button-hover-right">
-        <button class="next">
-          <p class="specialcharacters">&#62;</p>
-        </button>
+
+      <div class="navigation">
+        <div class="navigation-bar navigation-bar-selected"></div>
+        <div class="navigation-bar"></div>
+        <div class="navigation-bar"></div>
+        <div class="navigation-bar"></div>
+
+
+
       </div>
+
     </div>
     <br>
     <br>
