updated all other stuff

--- a/architecture/index.html
+++ b/architecture/index.html
@@ -59,8 +59,7 @@
 
   <!--body1-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/RC_Diagram.svg"
-      alt="RECREATION COMMONS" class="image-hover" id="image-rc">
+    <img src="./RC_Diagram.svg" alt="RECREATION COMMONS" class="image-hover" id="image-rc">
 
     <div class="image-text-hover">
       <div><a href="/architecture/recreation_commons">RECREATION COMMONS</a></div>
@@ -100,6 +99,24 @@
     </div>
   </div>
   <!--body3-->
+  <hr>
+  <!--body4-->
+  <div class="container_body">
+    <img src="./KP_Diagram.jpg" alt="MANIFOLD GROUND" class="image-hover">
+
+    <div class="image-text-hover">
+      <div><a>KAPPE HOUSE STUDY</a></div>
+
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
+      <p class="text-body-description">Instructor: Yung Ho Chang</p>
+    </div>
+  </div>
+  <!--body4-->
   <hr>
 
   <!--body6-->
@@ -156,15 +173,14 @@
 
   <!--body5-->
   <div class="container_body">
-    <img
-      src="./the_rotation_of_curves.jpg"
-      alt="THE ROTATION CURVES" class="image-hover">
+    <img src="./the_rotation_of_curves.jpg" alt="THE ROTATION CURVES" class="image-hover">
 
     <div class="image-text-hover">
       <div><a href="/architecture/the_rotation_of_curves/">THE ROTATION OF CURVES</a></div>
 
     </div>
   </div>
+
 
   <div>
     <div class="container-body-description">
@@ -179,26 +195,10 @@
   </div>
   <!--body5-->
   <hr>
-  <!--body4-->
-  <div class="container_body">
-    <img src="./KP_Diagram.jpg" alt="MANIFOLD GROUND" class="image-hover">
 
-    <div class="image-text-hover">
-      <div>KAPPE HOUSE</div>
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
-      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
-      <p class="text-body-description">Instructor: Yung Ho Chang</p>
-    </div>
-  </div>
-  <!--body4-->
-  <hr>
   <!--body6-->
   <div class="container_body">
-    <img src="./other_works.jpg" alt="LACMA" class="image-hover">
+    <img src="./LACAMA.jpg" alt="LACMA" class="image-hover">
 
     <div class="image-text-hover">
       <div><a href="/architecture/LACAMA/">LACMA</a></div>
@@ -207,18 +207,20 @@
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">Architecture & Urbanism Design Studio ARCH 201 FALL 2016</p>
-      <p class="text-body-description"> 798 Exhibition Gallery 2010</p>
-      <p class="text-body-description"> Mountain Residential House 2012</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016</p>
+      <p class="text-body-description"> Instructor: Mark Anderson</p>
     </div>
   </div>
   <!--body6-->
+  <hr>
+
   <!--body7-->
   <div class="container_body">
-    <img src="./other_works.jpg" alt="OTHER ACADEMIC WORKS" class="image-hover">
+    <img src="./thesis_studio.jpg" alt="THESIS STUDIO" class="image-hover">
 
     <div class="image-text-hover">
-      <div><a href="/architecture/other_academic_works/">OTHER ACADEMIC WORKS</a></div>
+      <div><a href="/architecture/thesis_studio/">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS</a>
+      </div>
 
     </div>
   </div>
@@ -226,12 +228,14 @@
     <div class="container-body-description">
       <p class="text-body-title">THESIS STUDIO
       </p>
-      <p class="text-body-description"> 798 Exhibition Gallery 2010</p>
-      <p class="text-body-description">The Renovation of a Factory Building 2013</p>
-      <p class="text-body-description"> Mountain Residential House 2012</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley, ARCH 204 A & B, FALL 2018 - SPRING
+        2019</p>
+      <p class="text-body-description"> Instructor: Kyle Steinfeld</p>
     </div>
   </div>
   <!--body7-->
+  <hr>
+
   <!--body8-->
   <div class="container_body">
     <img src="./others.jpg" alt="OTHER ACADEMIC WORKS" class="image-hover">
