--- a/architecture/other_academic_works/index.html
+++ b/architecture/other_academic_works/index.html
@@ -63,120 +63,175 @@
 
     </div>
     <!--head-->
-
-    <!--body1-->
     <div class="container_body">
-      <img src="./recovery_of_river_edges_img.jpg" alt="DIAGRAM" class="image">
-
-      <div class="image-text">
-        <div class="text_button"> RECOVERY OF RIVER EDGES</div>
+      <div class="container-body-description">
+        <p class="text-body-title">THE RENOVATION OF A FACTORY BUILDING 2013</p>
       </div>
-    </div>
-    <!--body1-->
-    <!--body2-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges_site.jpg" alt="SITE" class="image">
+      <br>
+      <br>
+      <br>
+      <img src="./factory_site1.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      
+      <div class = container-body-project-img>
+      <img src="./factory_diagram5.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./factory_site2.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br> 
+      <img src="./factory_site3.jpg" alt="Renovation of a Factory Building" class="image">
 
-      <div class="image-text">
-        <div class="text_button">SITE</div>
-      </div>
-    </div>
-
-
-    <!--body2-->
-    <!--body3-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges_sitedg.jpg" alt="site plan" class="image">
-
-      <div class="image-text">
-        <div class="text_button">SUBJECT & OBJECTS</div>
-      </div>
-    </div>
-    <!--body3-->
-    <!--body4-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges_sitephoto.jpg" alt="DIAGRAM" class="image">
-
-      <div class="image-text">
-        <div class="text_button">SEQUENCES AND MOVEMENTS</div>
-      </div>
-    </div>
-
-    <!--body4-->
+      <br>
+      <br>
+      <br>
+      <br>
 
 
-    <!--body2-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges_siteimage.jpg" alt="render" class="image">
 
-      <div class="image-text">
-        <div class="text_button">MOVEMENTS AND DENSITY</div>
-      </div>
-    </div>
-    <!--body2-->
+      <img src="./factory_diagram3.jpg" alt="Renovation of a Factory Building" class="image">
 
-
-    <!--body2-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges_project.jpg" alt="DIAGRAM" class="image">
-
-      <div class="image-text">
-        <div class="text_button">METHODOLOGY</div>
-      </div>
-    </div>
-    <!--body2-->
-    <!--body4-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges.jpg" alt="DIAGRAM" class="image">
-
-      <div class="image-text">
-        <div class="text_button">SEQUENCES AND MOVEMENTS</div>
-      </div>
+      <br>
+      <br>
+      <img src="./factory_diagram4.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
     </div>
 
-    <!--body4-->
+      <img src="./factory_diagram8.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./factory_massing.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./factory_diagram2.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./factory_render.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <img src="./factory_render1.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
 
-    <!--body2-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges_project1.jpg" alt="DIAGRAM" class="image">
+      <img src="./factory_diagram.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class = container-body-project-img>
 
-      <div class="image-text">
-        <div class="text_button">PROGRAMS</div>
-      </div>
+      <img src="./factory_diagram7.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./factory_diagram6.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
-    <!--body2-->
-    <!--body2-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges_project2.jpg" alt="DIAGRAM" class="image">
 
-      <div class="image-text">
-        <div class="text_button">DIAGRAMS</div>
+      <img src="./factory_facade.jpg" alt="Renovation of a Factory Building " class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="horizontal-line"></div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+      <div class="container-body-description">
+        <p class="text-body-title">MOUNTAIN RESIDENTIAL HUSE 2012</p>
       </div>
-    </div>
-    <!--body2-->
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./village2.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./village.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./village1.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
 
-
-
-
-    <!--body2-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges_plan.jpg" alt="DIAGRAM" class="image">
-
-      <div class="image-text">
-        <div class="text_button">FLOOR PLAN</div>
+      <div class = container-body-project-img> <img src="./village3.jpg" alt="Renovation of a Factory Building" class="image">
       </div>
-    </div>
-    <!--body2-->
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="./village4.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+      <br>
+      <br>
 
-    <!--body2-->
-    <div class="container_body">
-      <img src="./recovery_of_river_edges_render.jpg" alt="DIAGRAM" class="image">
 
-      <div class="image-text">
-        <div class="text_button">EXPERIENCE</div>
-      </div>
+      <br>
+      <br>
+      <img src="./village5.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+
+
+      <img src="./village6.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+
+      <br>
+      <br>
+
+      <img src="./village7.jpg" alt="Renovation of a Factory Building" class="image">
+      <br>
+      <br>
+
+
+
+
     </div>
-    <!--body2-->
+
+
+
+
 
 
     <!--footer-->
