--- a/meal_planner/index.html
+++ b/meal_planner/index.html
@@ -49,7 +49,7 @@
           </p>
         </div>
         <div class="container-head-right" id="topbar-right">
-          <div> <a href="/" class="active"> DESIGN </a>
+          <div> <a href="/" class="active"> PROJECT </a>
           </div>
           <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
           </div>
