--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -49,7 +49,7 @@
           </p>
         </div>
         <div class="container-head-right" id="topbar-right">
-          <div> <a href="/" class="active"> DESIGN </a>
+          <div> <a href="/" class="active"> PROJECT </a>
           </div>
           <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
           </div>
@@ -1804,26 +1804,250 @@
       <br>
       <br>
       <div class="container-body-description">
-        Selected Initial Concepts
+        SELECTED INITIAL CONCEPTS
       </div>
-
+      <br>
+      <br>
+      <div class="container-body-project">
+        <div class="container-body-project-horizontaldiagram">
+          <svg width="637px" height="622px" viewBox="0 0 637 622" version="1.1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <title>Page 1</title>
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <g id="Desktop-HD-Copy-11" transform="translate(-132.000000, -48.000000)">
+                <rect id="Rectangle-Copy-13" fill="#F5F5F5" x="132" y="381" width="296"
+                  height="289"></rect>
+                <rect id="Rectangle-Copy-12" fill="#F5F5F5" x="471" y="48" width="298" height="300">
+                </rect>
+                <rect id="Rectangle-Copy-15" fill="#F5F5F5" x="133" y="48" width="295" height="300">
+                </rect>
+                <rect id="Rectangle-Copy-14" fill="#F5F5F5" x="474" y="381" width="295"
+                  height="289"></rect>
+                <line x1="187.653846" y1="158.5" x2="373.346154" y2="158.5" id="Line-2-Copy-59"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="187.653846" y1="500.5" x2="373.346154" y2="500.5" id="Line-2-Copy-61"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="405" y1="364.5" x2="495" y2="364.5" id="Line-2-Copy-63" stroke="#979797"
+                  stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="449.5" y1="319" x2="449.5" y2="409" id="Line-2-Copy-63" stroke="#979797"
+                  stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="527.653846" y1="158.5" x2="713.346154" y2="158.5" id="Line-2-Copy-60"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="528.653846" y1="500.5" x2="714.346154" y2="500.5" id="Line-2-Copy-62"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <text id="•" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="188" y="205">•</tspan>
+                </text>
+                <text id="•-network-with-neigh" font-family="Helvetica-Light, Helvetica"
+                  font-size="16" font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="527" y="205">• network with neighbors</tspan>
+                </text>
+                <text id="•" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="528" y="547">•</tspan>
+                </text>
+                <text id="•-Identify-plants" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="187" y="547">• Identify plants</tspan>
+                </text>
+                <text id="Share-&amp;-Sell" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" fill="#000000">
+                  <tspan x="237.576" y="111">Share &amp; Sell</tspan>
+                </text>
+                <text id="Local-Social-Network" font-family="Helvetica-Light, Helvetica"
+                  font-size="16" font-weight="300" fill="#000000">
+                  <tspan x="544.864" y="111">Local Social Network</tspan>
+                </text>
+                <text id="Managing-Plant-Disea" font-family="Helvetica-Light, Helvetica"
+                  font-size="16" font-weight="300" fill="#000000">
+                  <tspan x="565.984" y="458">Managing Plant </tspan>
+                  <tspan x="589.104" y="477">Diseases</tspan>
+                </text>
+                <text id="Plant-Library" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" fill="#000000">
+                  <tspan x="234.96" y="464">Plant Library</tspan>
+                </text>
+              </g>
+            </g>
+          </svg>
+        </div>
+      </div>
 
       <br>
       <br>
       <div class="container-body-description">
-        Revised Concepts
+        REVISED CONCEPTS
       </div>
-
-
+      <br>
+      <br>
+      <div class="container-body-project">
+        <div class="container-body-project-horizontaldiagram">
+          <svg width="637px" height="622px" viewBox="0 0 637 622" version="1.1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <title>Page 1</title>
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <g id="Desktop-HD-Copy-11" transform="translate(-132.000000, -48.000000)">
+                <rect id="Rectangle-Copy-13" fill="#F5F5F5" x="132" y="381" width="296"
+                  height="289"></rect>
+                <rect id="Rectangle-Copy-12" fill="#F5F5F5" x="471" y="48" width="298" height="300">
+                </rect>
+                <rect id="Rectangle-Copy-15" fill="#F5F5F5" x="133" y="48" width="295" height="300">
+                </rect>
+                <rect id="Rectangle-Copy-14" fill="#F5F5F5" x="474" y="381" width="295"
+                  height="289"></rect>
+                <line x1="187.653846" y1="158.5" x2="373.346154" y2="158.5" id="Line-2-Copy-59"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="187.653846" y1="500.5" x2="373.346154" y2="500.5" id="Line-2-Copy-61"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="405" y1="364.5" x2="495" y2="364.5" id="Line-2-Copy-63" stroke="#979797"
+                  stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="449.5" y1="319" x2="449.5" y2="409" id="Line-2-Copy-63" stroke="#979797"
+                  stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="527.653846" y1="158.5" x2="713.346154" y2="158.5" id="Line-2-Copy-60"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="528.653846" y1="500.5" x2="714.346154" y2="500.5" id="Line-2-Copy-62"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <text id="•" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="188" y="205">•</tspan>
+                </text>
+                <text id="•-network-with-neigh" font-family="Helvetica-Light, Helvetica"
+                  font-size="16" font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="527" y="205">• network with neighbors</tspan>
+                </text>
+                <text id="•" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="528" y="547">•</tspan>
+                </text>
+                <text id="•-Identify-plants" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="187" y="547">• Identify plants</tspan>
+                </text>
+                <text id="Share-&amp;-Sell" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" fill="#000000">
+                  <tspan x="237.576" y="111">Share &amp; Sell</tspan>
+                </text>
+                <text id="Local-Social-Network" font-family="Helvetica-Light, Helvetica"
+                  font-size="16" font-weight="300" fill="#000000">
+                  <tspan x="544.864" y="111">Local Social Network</tspan>
+                </text>
+                <text id="Managing-Plant-Disea" font-family="Helvetica-Light, Helvetica"
+                  font-size="16" font-weight="300" fill="#000000">
+                  <tspan x="565.984" y="458">Managing Plant </tspan>
+                  <tspan x="589.104" y="477">Diseases</tspan>
+                </text>
+                <text id="Plant-Library" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" fill="#000000">
+                  <tspan x="234.96" y="464">Plant Library</tspan>
+                </text>
+              </g>
+            </g>
+          </svg>
+        </div>
+      </div>
       <br>
       <br>
       <br>
       <div class="container-body-description">
-        Horticulture Society Concepts </div>
+        HORTICULTURE SOCIETY CONCEPTS
+      </div>
 
       <br>
       <br>
+      <div class="container-body-project">
+        <div class="container-body-project-horizontaldiagram">
+          <svg width="637px" height="622px" viewBox="0 0 637 622" version="1.1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <title>Page 1</title>
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <g id="Desktop-HD-Copy-11" transform="translate(-132.000000, -48.000000)">
+                <rect id="Rectangle-Copy-13" fill="#F5F5F5" x="132" y="381" width="296"
+                  height="289"></rect>
+                <rect id="Rectangle-Copy-12" fill="#F5F5F5" x="471" y="48" width="298" height="300">
+                </rect>
+                <rect id="Rectangle-Copy-15" fill="#F5F5F5" x="133" y="48" width="295" height="300">
+                </rect>
+                <rect id="Rectangle-Copy-14" fill="#F5F5F5" x="474" y="381" width="295"
+                  height="289"></rect>
+                <line x1="187.653846" y1="158.5" x2="373.346154" y2="158.5" id="Line-2-Copy-59"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="187.653846" y1="500.5" x2="373.346154" y2="500.5" id="Line-2-Copy-61"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="405" y1="364.5" x2="495" y2="364.5" id="Line-2-Copy-63" stroke="#979797"
+                  stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="449.5" y1="319" x2="449.5" y2="409" id="Line-2-Copy-63" stroke="#979797"
+                  stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="527.653846" y1="158.5" x2="713.346154" y2="158.5" id="Line-2-Copy-60"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <line x1="528.653846" y1="500.5" x2="714.346154" y2="500.5" id="Line-2-Copy-62"
+                  stroke="#979797" stroke-width="0.5" stroke-linecap="square"></line>
+                <text id="•" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="188" y="205">•</tspan>
+                </text>
+                <text id="•-network-with-neigh" font-family="Helvetica-Light, Helvetica"
+                  font-size="16" font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="527" y="205">• network with neighbors</tspan>
+                </text>
+                <text id="•" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="528" y="547">•</tspan>
+                </text>
+                <text id="•-Identify-plants" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" line-spacing="24" fill="#5C5C5C">
+                  <tspan x="187" y="547">• Identify plants</tspan>
+                </text>
+                <text id="Share-&amp;-Sell" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" fill="#000000">
+                  <tspan x="237.576" y="111">Share &amp; Sell</tspan>
+                </text>
+                <text id="Local-Social-Network" font-family="Helvetica-Light, Helvetica"
+                  font-size="16" font-weight="300" fill="#000000">
+                  <tspan x="544.864" y="111">Local Social Network</tspan>
+                </text>
+                <text id="Managing-Plant-Disea" font-family="Helvetica-Light, Helvetica"
+                  font-size="16" font-weight="300" fill="#000000">
+                  <tspan x="565.984" y="458">Managing Plant </tspan>
+                  <tspan x="589.104" y="477">Diseases</tspan>
+                </text>
+                <text id="Plant-Library" font-family="Helvetica-Light, Helvetica" font-size="16"
+                  font-weight="300" fill="#000000">
+                  <tspan x="234.96" y="464">Plant Library</tspan>
+                </text>
+              </g>
+            </g>
+          </svg>
+        </div>
+      </div>
       <br>
+      <br>
+      <br>
+
+      <div class="text-project-numbers">
+        04 </div>
+
+
+
+      <div class="text-project-phase">
+        PROTOTYPE & TESTING </div>
+
+      <br>
+      <br>
+      <div class="container-body-description">
+        LOW-FIDELITY WIREFRAMES    </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="container-body-description">
+        MID-FIDELITY WIREFRAMES    </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="container-body-description">
+        HIGH-FIDELITY WIREFRAMES    </div>
       <br>
       <br>
       <br>
