Design Project Update
Gardeners' Hub

--- a/about/index.html
+++ b/about/index.html
@@ -72,11 +72,13 @@
 
       <div class="text-about-hi"><strong>Hello, I'm Vicky</strong></div>
       <div class="text-about-intro">
-        a Product Designer based in San Francisco Bay Area who loves solving challenging problems and transform complexity into simplicity. I've worked on digital products related to design and code. 
+        A product designer based in San Francisco Bay Area who loves solving challenging design
+        problems that turning complexity into simplicity based on business goals and existing
+        techniques requirements. I've worked on digital products related to design and build.
 
 
 
-</div>
+      </div>
     </div>
     <!--container_intro-->
     <hr>
@@ -107,7 +109,7 @@
 
         <div>
           <p class="text-title-right"> Beijing University of Technology</p>
-          <p class="text-time">August 2013 - May 2009</p>
+          <p class="text-time">May 2009 - August 2013</p>
           <div>
             <p class="text-right-description"> College of Art and Design</p>
           </div>
@@ -158,7 +160,7 @@
 
 
         <p class="text-title-right">PDI Design Group </p>
-        <p class="text-time">August 2016 - July 2017</p>
+        <p class="text-time">December 2013 - July 2015</p>
         <div class="container-body-right-insertion">
           <p class="vertical-line"></p>
           <div class="container-body-right-nomargin">
@@ -198,132 +200,187 @@
       <div class="container-body-right">
 
 
-        <div class="item-right">
-          <p class="text-title-right">UI/UX </p>
-        </div>
-        <div class="container-body-right-nomargin">
-          <p class="text-right-description">Sketch, Adobe XD, Figma
-          </p>
+        <p class="text-title-right">UI/UX</p>
+        <p class="text-time"></p>
+        <div class="container-body-right-insertion">
+          <p class="vertical-line1"></p>
+          <div class="container-body-right-nomargin">
+            <p class="text-right-description">Sketch</p>
+            <p class="text-right-description">Adobe XD</p>
+            <p class="text-right-description">Figma</p>
+
+          </div>
         </div>
         <br>
 
-        <div class="item-right">
-          <p class="text-title-right">Programming </p>
+
+        <p class="text-title-right">Programming</p>
+        <p class="text-time"></p>
+        <div class="container-body-right-insertion">
+          <p class="vertical-line2"></p>
+          <div class="container-body-right-nomargin">
+            <p class="text-right-description">HTML</p>
+            <p class="text-right-description">CSS</p>
+            <p class="text-right-description">JavaScript</p>
+            <p class="text-right-description">jQuery</p>
+
+          </div>
+        </div>
+        <br>
+
+
+        <p class="text-title-right">2D Graphic</p>
+        <p class="text-time"></p>
+        <div class="container-body-right-insertion">
+          <p class="vertical-line"></p>
+          <div class="container-body-right-nomargin">
+            <p class="text-right-description">Adobe Suite (Illustrator, Photoshop, InDesign)</p>
+            <p class="text-right-description">AutoCAD</p>
+
+
+          </div>
+        </div>
+        <br>
+
+        <p class="text-title-right">3D Modelling and VR</p>
+        <p class="text-time"></p>
+        <div class="container-body-right-insertion">
+          <p class="vertical-line3"></p>
+          <div class="container-body-right-nomargin">
+            <p class="text-right-description">Rhino</p>
+            <p class="text-right-description">Grasshopper</p>
+            <p class="text-right-description">Sketchup</p>
+            <p class="text-right-description">3Dmax Studio</p>
+            <p class="text-right-description">Unity</p>
+          </div>
         </div>
 
-        <div class="container-body-right-nomargin">
-          <p class="text-right-description">HTML, CSS, JavaScript, Python
-          </p>
+
+
+        <br>
+        <p class="text-title-right">Research</p>
+        <p class="text-time"></p>
+        <div class="container-body-right-insertion">
+          <p class="vertical-line4"></p>
+          <div class="container-body-right-nomargin">
+            <p class="text-right-description">Affinity Diagramming</p>
+            <p class="text-right-description">Cognitive Mapping</p>
+            <p class="text-right-description">Behavioral Mapping</p>
+            <p class="text-right-description">Contextual Inquiry</p>
+            <p class="text-right-description">Survey</p>
+            <p class="text-right-description">Experience Prototyping</p>
+            <p class="text-right-description"></p>
+          </div>
         </div>
 
         <br>
 
-        <div class="item-right">
-          <p class="text-title-right">2D Graphic </p>
-        </div>
-        <div class="container-body-right-nomargin">
-          <p class="text-right-description">Adobe Suite (Illustrator, Photoshop, InDesign), AutoCAD
-          </p>
-        </div>
 
-        <br>
-
-        <div class="item-right">
-          <p class="text-title-right">3D Modelling and VR
-          </p>
-        </div>
-        <div class="container-body-right-nomargin">
-          <p class="text-right-description">Rhino, Grasshopper, Sketchup, 3Dmax Studio, Unity
-          </p>
+        <p class="text-title-right">Fabrication</p>
+        <p class="text-time"></p>
+        <div class="container-body-right-insertion">
+          <p class="vertical-line3"></p>
+          <div class="container-body-right-nomargin">
+            <p class="text-right-description">3D Printing</p>
+            <p class="text-right-description">Blade Cutter (Zund S3 Digital)</p>
+            <p class="text-right-description">CNC (Techno Isel 3-axis CNC router)</p>
+            <p class="text-right-description">Laser Cutter</p>
+            <p class="text-right-description">3D Scanner (NextEngine 3D)</p>
+          </div>
         </div>
 
-        <br>
-        <div class="item-right">
-          <p class="text-title-right">Research
-          </p>
-        </div>
-        <div class="container-body-right-nomargin">
-          <p class="text-right-description">Affinity Diagramming, Cognitive Mapping, Behavioral
-            Mapping, Competitive Testing, Contextual Inquiry, Survey, Experience Prototyping
-          </p>
-        </div>
-        
-
-        <br>
-
-        <div class="item-right">
-          <p class="text-title-right">Fabrication
-          </p>
-        </div>
-        <div class="container-body-right-nomargin">
-          <p class="text-right-description">3D Printing, Blade Cutter (Zund S3 Digital), CNC (Techno
-            Isel 3-axis CNC router), Laser Cutter,3D Scanner (NextEngine 3D)
-          </p>
-        </div>
-
-        <br>
-
-
-
-
-        <div class="item-right">
-          <p class="text-title-right">Certificate
-          </p>
-        </div>
-        <div class="container-body-right-nomargin">
-          <p class="text-right-description">LEED Green Associate (id:11321289)
-            <br> UC Berkeley, Environmental Design [IN]ARCH ADV</p>
-        </div>
       </div>
+
+    </div>
+    <hr>
+
+    <div class="container-body-intro-row">
+
+      <div class="container-body-left">
+        <strong class="text-title-left">Certificate</strong>
+      </div>
+
+      <div class="container-body-right">
+
+        <div class="item-right">
+          <p class="text-title-right">LEED Green Associate </p>
+        </div>
+
+        <div class="container-body-right-nomargin">
+          <p class="text-time"></p>
+
+          <p class="text-right-description">id:11321289
+          </p>
+        </div>
+
+        <br>
+
+
+        <div class="item-right">
+          <p class="text-title-right">[IN]ARCH ADV </p>
+        </div>
+
+        <div class="container-body-right-nomargin">
+          <p class="text-time"></p>
+
+          <p class="text-right-description">UC Berkeley, Environmental Design
+          </p>
+        </div>
+
+
+      </div>
+      <br>
+
+
+
     </div>
 
 
-
-  </div>
-
-  <!--container_intro + resume-->
-  <div class="blank-thicker"></div>
+    <!--container_intro + resume-->
+    <div class="blank-thicker"></div>
 
 
 
-  <!--footer-->
-  <div class="container_footer">
+    <!--footer-->
+    <div class="container_footer">
 
-    <div id="infor">
-      <div>
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
-        </a>
+      <div id="infor">
+        <div>
+          <a href="mailto:vickyw.design@gmail.com">
+            <img class="image_footer"
+              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
+          </a>
 
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
+            <img class="image_footer"
+              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
+              alt="linkedin">
+          </a>
+        </div>
+
+        <div>
+          <a href="https://github.com/vicky-wyq">
+            <img class="image_footer"
+              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg"
+              alt="github">
+          </a>
+        </div>
+
+        <div>
+          <a href="https://medium.com/@vickywang.design">
+            <img class="image_footer"
+              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg"
+              alt="medium">
+          </a>
+        </div>
       </div>
-      <div>
-        <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-            alt="linkedin">
-        </a>
-      </div>
 
-      <div>
-        <a href="https://github.com/vicky-wyq">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
-        </a>
-      </div>
+      <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
+      </p>
 
-      <div>
-        <a href="https://medium.com/@vickywang.design">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
-        </a>
-      </div>
     </div>
-
-    <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
-    </p>
-
-  </div>
 </body>
 
 </html>
