--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <link rel="stylesheet" href="main.css" />
   <script type="text/javascript" src="scripts.js"></script>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.css" />
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -37,6 +41,7 @@
 </head>
 
 <body>
+
   <!--head-->
   <div class="container-head" id="topbar">
 
@@ -62,9 +67,10 @@
 
   <!--body1-->
   <div class="container_body">
-    <img src="./layout_gardenershub.png"
+    <div  class= "container-body-project-img">
+    <img src="./layout_gardenershub.png" 
       alt="DRAWING OF KAPPE RAY HOUSE" class="image-hover">
-
+    </div>
     <div class="image-text-hover">
       <div><a href="/gardeners_hub">GARDENERS HUB</a></div>
     </div>
@@ -83,9 +89,11 @@
 
   <!--body2-->
   <div class="container_body">
+    <div  class= "container-body-project-img">
+
     <img src="./layout_mealplanner.png"
       alt="Urban Backyard" class="image-hover">
-
+    </div>
     <div class="image-text-hover">
       <div><a href="/meal_planner">MEAL PLANNER</a></div>
     </div>
@@ -103,27 +111,7 @@
   <hr>
 
 
-  <!--body3-->
-  <div class="container_body">
-    <img src="./layout_mealplanner.png"
-      alt="Urban Backyard" class="image-hover">
 
-    <div class="image-text-hover">
-      <div><a href="/chromatic_button">MEAL PLANNER</a></div>
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Chromatic Button</p>
-      <p class="text-body-description">Fall 2020</p>
-
-    </div>
-
-  </div>
-  <div class="container_body">
-
-  </div>
-  <!--body3-->
 
 
 
