Adjusted blank space and line weight

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:description" content="Hi! Thanks for stopping by. 
   I enjoy design and code who loves solving challenging problems. 
   Interested in what you see? Shoot me an email :) " />
-  <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
+  <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
@@ -33,7 +33,7 @@
   <meta property="twitter:description" content="Hi! Thanks for stopping by. 
   I enjoy design and code who loves solving challenging problems. 
   Interested in what you see? Shoot me an email :)">
-  <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+  <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
@@ -77,9 +77,9 @@
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">GARDENER'S HUB CREATES FRIENDSHIP WITH LOCAL COMMUNITY</p>
+      <p class="text-body-title">GARDENER'S HUB CREATES MARKETPLACE AND FRIENDSHIP FOR THE LOCAL COMMUNITY</p>
       <p class="text-body-description">Individual Work</p>
-      <p class="text-body-description">Fall 2020</p>
+      <p class="text-body-description">Spring 2021</p>
 
     </div>
 
@@ -102,7 +102,7 @@
     <div class="container-body-description">
       <p class="text-body-title">A MOBILE APP HELPS PLANNING A HEALTHY AND EFFICIENT MEAL</p>
       <p class="text-body-description">Individual Work</p>
-      <p class="text-body-description">Fall 2020</p>
+      <p class="text-body-description">Spring 2021</p>
 
     </div>
 
