--- a/about/index.html
+++ b/about/index.html
@@ -67,21 +67,35 @@
 
     <div class="container-body-intro-column">
       <!--container-body 1-->
+
+
+      <br>
       <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/about/me.png" alt="me"
         id="image-me">
 
       <div class="text-about-hi"><strong>Hello, I'm Vicky</strong></div>
+
+
+
       <div class="text-about-intro">
-        A product designer based in San Francisco Bay Area who loves solving challenging design
-        problems that turning complexity into simplicity based on business goals and existing
-        techniques requirements. I've worked on digital products related to design and build.
-
-
-
+        I'm a product designer based in the San Francisco Bay Area passionate about translating
+        complex business requirements into compelling user experiences. While my focus is primarily
+        on design, I don't mind occasionally writing code when the need arises.
       </div>
+      <br>
+      <br>      <br>
+
+
+      <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/about/Resume.pdf"
+      class="text-about-resume"> Download My Resume </a>
+      <br>
+
+
+
     </div>
     <!--container_intro-->
     <hr>
+
 
     <div class="container-body-intro-row">
       <!--container-body 2-->
@@ -90,9 +104,6 @@
         <!--container_left-->
         <strong class="text-title-left">EDUCATION</strong>
       </div>
-
-
-
 
       <div class="container-body-right">
 
@@ -114,12 +125,7 @@
             <p class="text-right-description"> College of Art and Design</p>
           </div>
         </div>
-
-
       </div>
-
-
-
     </div>
 
     <hr>
@@ -140,7 +146,7 @@
           <p class="vertical-line"></p>
           <div class="container-body-right-nomargin">
             <p class="text-right-description">Beijing, China</p>
-            <p class="text-right-description">Architectural Assistant </p>
+            <p class="text-right-description">Architectural Designer </p>
           </div>
         </div>
         <br>
